samples/_failures_safe/1761390790_fa8590_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72d2dc03.c: In function ‘main’:
./samples/SAFE/__tmp_72d2dc03.c:164:11: error: expected ‘;’ at end of input
  164 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_72d2dc03.c:164:5: error: expected declaration or statement at end of input
  164 |     printf
      |     ^~~~~~
